refactor(server): update jvm options